# ESCO2022

./: README.md  pyproject.toml
Prius2004/: doe_calculation.py  doe_similarity.py  model_optimisation.py  model_robustness.py  plot_avg.py  plot_cog.py  plot_doe.py  plot_loc.py  plot_msh.py  plot_noe.py  plot_rot.py  plot_val.py  refine_avg.py  refine_cog.py  refine_doe.py  refine_loc.py  refine_msh.py  refine_rot.py  refine_val.py  simulation_optimisation.py  simulation_robustness.py
data/: NoE.xlsx  avg_msh_100.json  avg_msh_100_v2.json  avg_msh_150.json  avg_msh_200.json  avg_msh_250_v2.json  avgasl_200.json  avgear_100.json  cogging_torque.csv  cogging_torque.json  cogging_torquev1.json  cogging_torquev2.json  df_avg.pkl  df_avgear200.pkl  df_cogging.csv  df_cogging.pkl  df_doe100.pkl  df_doe200.pkl  df_doe250.pkl  df_env100.pkl  df_env150.pkl  df_locked.csv  df_locked.pkl  df_msh200.pkl  df_rbst250_bb.pkl  df_rbst250_cc.pkl  df_rbst250_wc.pkl  df_rip150.pkl  df_ripple150.pkl  df_ripple200.pkl  df_rotate_t2.pkl  df_rotate_t3.pkl  df_rotate_t4.pkl  df_rotateit2.pkl  df_rotateit3.pkl  df_stat100.pkl  df_stat150.pkl  df_stat200.pkl  df_wav200.pkl  df_wav250.pkl  (+43 more)
defaults/: misc.json  model.json  simulation.json
docs/: mkdocs.yml
executable/: doe_calculation.py  doe_similarity.py  model_optimisation.py  model_robustness.py  plot_avg.py  plot_cog.py  plot_doe.py  plot_loc.py  plot_msh.py  plot_noe.py  plot_rot.py  plot_val.py  refine_avg.py  refine_cog.py  refine_doe.py  refine_loc.py  refine_msh.py  refine_rot.py  refine_val.py  simulation_optimisation.py  (+1 more)
(+98 files in other folders)
