[tool.poetry]
name = "esco2022"
version = "0.1.0"
description = ""
authors = ["KatonaMihaly <katona0607@gmail.com>"]

# Project dependencies only
[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Jinja2 = ">3.0.1"
Shapely = ">1.8.0"
aiofiles = ">0.7.0"
ezdxf = ">0.16.5"
fastapi = ">0.70.0"
gmsh = ">4.8.4"
importlib-resources = ">5.4.0"
matplotlib = ">3.5.1"
mkdocs = ">1.2.3"
mkdocs-git-revision-date-plugin = ">0.3.1"
mkdocs-material = ">7.3.6"
mkdocstrings = {version=">0.16.2", extras = ["python"]}
networkx = ">2.6.3"
numpy = ">1.21.0"
pydantic = ">1.8.2"
pygmsh = ">7.1.13"
python-markdown-math = "^0.8"
scipy = ">1.7.0"
svgpathtools = ">1.4.2"
uvicorn = ">0.15.0"
requests = ">=2.27.1"
setuptools = ">61.2.0"
digital-twin-distiller = ">2022.1"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
pre-commit = "*"
pytest = "*"
isort = "*"
pyupgrade = "^3.2"
pylint = "^2.11.1"

# build system setup
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
